src/test/test_cases/invalid/semanticErr/forLoop/boolDeclaration.wacc
# looping variable is a boolean and not an integer

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  for (bool cond = false, cond) do
    skip
  done
end